# app-confetti

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: pythonapp.yml  testlint.yml
app_confetti/: config.py  util.py
app_confetti/fetch/: aws.py
clt_util/: constants.py  error.py  query.py  queue.py  runner.py  slack.py  util.py
clt_util/settings/: config.py
release_notes/: 1.feat  2.feat  4.feat
tests/: test_config.py  test_error.py  test_query.py  test_queue.py  test_runner.py  test_slack.py  test_util.py
tests/fetch/: test_aws.py  test_dotenv.py  test_file.py
