[tool.poetry]
name = "app_confetti"
version = "0.0.5"
description = "Environment application configuration"
authors = ["Daniel Edgecombe <edgy.edgemond@gmail.com>"]
license = "Apache-2.0"
repository="https://github.com/EdgyEdgemond/app-confetti/"
homepage="https://github.com/EdgyEdgemond/app-confetti/"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"

python-dotenv = "^0.15.0"
boto3 = { version = "^1.14.49", optional = true }
ec2-metadata  = { version = "^2.2.0", optional = true }

[tool.poetry.extras]
aws = ["boto3", "ec2-metadata"]

[tool.poetry.dev-dependencies]

changelog-gen = "~0.7.0"
flake8 = "^3.7"
flake8-commas = "^2.0"
flake8-isort = "^2.7"
flake8-quotes = "^2.1"
isort = "^4.3"
pytest = "^5.2"
pytest-asyncio = "*"
pytest-cov = "^2.8"
pytest-git = "^1.7.0"
pytest-random-order = "^1.0"

[build-system]
requires = ["poetry-core>=1.0"]
build-backend = "poetry.core.masonry.api"
