[tool.poetry]
name = "app_confetti"
version = "0.0.5"
description = "Environment application configuration"
authors = ["Daniel Edgecombe <edgy.edgemond@gmail.com>"]
license = "Apache-2.0"
repository="https://github.com/EdgyEdgemond/app-confetti/"
homepage="https://github.com/EdgyEdgemond/app-confetti/"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"

boto3 = "^1.14.49"
ec2-metadata = "^2.2.0"
python-dotenv = "^0.15.0"

[tool.poetry.dev-dependencies]

changelog-gen = "~0.7.0"

# Tests
pytest = "^7.1.2"
pytest-asyncio = "^0.18.3"
pytest-cov = "^3.0.0"
pytest-git = "^1.7.0"
pytest-random-order = "^1.0.4"

# # Style
autopep8 = "^1.5.7"
flake8 = "^3.9.2"
flake8-commas = "^2.1.0"
flake8-isort = "^4.1.1"
flake8-quotes = "^3.3.1"
isort = "^5.10.1"
flake8-tabs = "^2.3.2"

[build-system]
requires = ["poetry-core>=1.0"]
build-backend = "poetry.core.masonry.api"
