[tool.poetry]
name = "app_confetti"
version = "0.1.2"
description = "Environment application configuration"
authors = ["Daniel Edgecombe <edgy.edgemond@gmail.com>"]
license = "Apache-2.0"
repository="https://github.com/EdgyEdgemond/app-confetti/"
homepage="https://github.com/EdgyEdgemond/app-confetti/"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

python-dotenv = "^0.15.0"
boto3 = { version = "^1.14.49", optional = true }
ec2-metadata  = { version = "^2.2.0", optional = true }

[tool.poetry.extras]
aws = ["boto3", "ec2-metadata"]

[tool.poetry.dev-dependencies]

changelog-gen = "^0.8.1"

# Tests
pytest = "^7.1.2"
pytest-asyncio = "^0.18.3"
pytest-cov = "^3.0.0"
pytest-git = "^1.7.0"
pytest-random-order = "^1.0.4"

# Style
ruff = "^0.0"
pre-commit = "^3.0.2"
black = "^22.12.0"

[build-system]
requires = ["poetry-core>=1.0"]
build-backend = "poetry.core.masonry.api"
